    - Some Python 2 compatibility code dropped
    - Rework runtest.py to use argparse for arg handling (was a mix
      of hand-coded and optparse, with a stated intent to "gradually port").
    - Add options to runtest to generate/not generate a log of failed tests,
      and to rerun such tests. Useful when an error cascades through several
      tests, can quickly try if a change improves all the fails.

  From Simon Tegelid
    - Fix using TEMPFILE in multiple actions in an action list. Previously a builder, or command
      with an action list like this:
      ['${TEMPFILE("xxx.py -otempfile $SOURCE")}', '${TEMPFILE("yyy.py -o$TARGET tempfile")}']
      Could yield a single tempfile with the first TEMPFILE's contents, used by both steps
      in the action list.





RELEASE 4.0.1 - Mon, 16 Jul 2020 16:06:40 -0700

  From Rob Boehne:
    - Fix fortran tools to set SHFORTRAN variables to $FORTRAN, similarly SHF77, SHF90, SHF95,
      SHF03 and SHF08 will default to the variables $F77, $F90, $F95, $F03 and $F08 respectively.
      If you were depending on changing the value of FORTRAN (or $F[0-9][0-9]) having no effect
      on the value of SHFORTRAN, this change will break that.   The values of FORTRAN, F77, F90,
      F95, F03, F08 and SHFORTRAN, SHF77 (etc.) now are not overridden in generate if alredy set
      by the user.
    - Fix subprocess execution of 'lslpp' on AIX to produce text standard i/o.
    - Re-do the fix for suncxx tool (Oracle Studio compiler) now that only Python 3 is supported,
      to avoid decoding errors.

  From William Deegan:
    - Added Environment() variable TEMPFILEDIR which allows setting the directory which temp
      files createdby TEMPFILEMUNGE are created in.

  From Daniel Moody:
    - Added method on Node to test if its node used in SConf. (Github Issue #3626)



RELEASE 4.0.0 - Sat, 04 Jul 2020 12:00:27 +0000

  From Dirk Baechle:
    - Updated documentation toolchain to work properly under Python3, also