@@ -75,7 +75,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       of hand-coded and optparse, with a stated intent to "gradually port").
     - Add options to runtest to generate/not generate a log of failed tests,
       and to rerun such tests. Useful when an error cascades through several
-      tests, can quickly try if a change improves all the fails.
+      tests, can quickly try if a change improves all the fails. Dropped
+      runtest test for fallback from qmtest, not needed; added new tests.
 
   From Simon Tegelid
     - Fix using TEMPFILE in multiple actions in an action list. Previously a builder, or command
